# super-glass-lsp

./: .flake8  .gitignore  README.md  RELEASING.md  py.test  pyproject.toml  pytest.ini  sample.json
.github/workflows/: ci.yml  release.yml
docs/: NOTES.md
src/: __init__.py  config.default.yaml  main.py
src/lsp/: clitool_config.py  definition.py  diagnoser.py  hooks.py  server.py  setup.py
src/lsp/custom/: __init__.py  completer.py  config.py  config_definitions.py  diagnoser.py  features.py  hub.py
src/lsp/custom/features/: __init__.py  completer.py  diagnoser.py
src/lsp/custom/tests/: test_completer.py  test_config.py  test_diagnostics.py
src/lsp/custom/tests/e2e/: test_init_config.py
src/lsp/custom/tests/e2e/configs/: __init__.py  fzf_buffer_test.py  jq_test.py  markdownlint_test.py  mypy_test.py
src/lsp/custom/tests/units/: test_completer.py  test_config.py  test_diagnostics.py
super_glass_lsp/: __init__.py  config.default.yaml  main.py
super_glass_lsp/lsp/: __init__.py  server.py  setup.py
super_glass_lsp/lsp/custom/: __init__.py  config_definitions.py  hub.py
super_glass_lsp/lsp/custom/apps/: email_client.yaml
super_glass_lsp/lsp/custom/features/: __init__.py  _base.py  _commands.py  _debounce.py  _document.py  _feature.py  _subprocess.py  completer.py  diagnoser.py  formatter.py  goto_definition.py  work_done_progress.py  workspace_edit.py
super_glass_lsp/lsp/custom/tests/: utils.py
super_glass_lsp/lsp/custom/tests/e2e/: test_debounce_e2e.py  test_init_config.py
super_glass_lsp/lsp/custom/tests/e2e/_bin/: himalaya
super_glass_lsp/lsp/custom/tests/e2e/apps/: _utils.py
super_glass_lsp/lsp/custom/tests/e2e/apps/email_client/: main_test.py
super_glass_lsp/lsp/custom/tests/e2e/configs/: __init__.py  black_test.py  flake8_test.py  fzf_buffer_test.py  jq_test.py  markdownlint_test.py  mypy_test.py
super_glass_lsp/lsp/custom/tests/units/: _utils.py  test_completer.py  test_config.py  test_debounce.py  test_diagnostics.py  test_feature.py  test_formatter.py  test_work_done_progress.py  test_workspace_edit.py
tests/: test_server.py
tests/workspace/: README.md
