[tool.poetry]
name = "cli-tools-lsp"
version = "0.1.0"
description = "Generic LSP to parse the output of CLI tools, linters, formatters, etc"
authors = ["Thomas Buckley-Houston <tom@tombh.co.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
parse = "^1.19.0"
pygls = "^0.12.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
mypy = "^0.982"
black = "^22.8.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = [
    "src/main.py"
]

[tool.pylsp-mypy]
enabled = true
live_mode = false
dmypy = true
strict = false
