[tool.poetry]
name = "super-glass-lsp"
version = "0.5.0"
description = "Generic LSP to parse the output of CLI tools, linters, formatters, etc"
authors = ["Thomas Buckley-Houston <tom@tombh.co.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "super_glass_lsp"}]

[tool.poetry.dependencies]
python = "^3.10"
parse = "^1.19.0"
pygls = "^0.12.2"
pyyaml = "^6.0"
mergedeep = "^1.3.4"
single-source = "^0.3.0"
psutil = "^5.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
mypy = "^0.982"
black = "^22.8.0"
pytest-mock = "^3.10.0"
pytest-lsp = "^0.1.2"
types-pyyaml = "^6.0.12"
pytest-timeout = "^2.1.0"
pytest-xdist = "^3.0.2"

[tool.poetry.scripts]
super-glass-lsp   = "super_glass_lsp.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = [
    "super-glass-lsp/main.py"
]

[tool.pylsp-mypy]
enabled = true
live_mode = false
dmypy = true
strict = false

[http-basic]
[http-basic.my-pypi]
username = "tombh"
